# P-ONE

./: .gitignore  .gitmodules  AGENTS.md  pytest.ini
BLL_CODE/Code ReVIEW/: 501x9_640449.mat  Untitled.m  compare_fft_cpp.m  createccffigure.m  criterion.m  main_option_states.m  main_option_states2.m  main_option_states_SVHJ_1.m  main_option_states_SVHJ_2.m  main_option_states_SVHJ_3.m  main_option_states_recursive_1.m  main_option_states_recursive_2.m  main_option_states_recursive_SVHJ_1.m  main_option_states_recursive_SVHJ_2.m  main_option_states_recursive_SVHJ_3.m  main_real_data_SVHJ_3.m  main_sim_data.m  muq_states.fig  (+8 more)
Matlab/: faster_implying_states_cu_optiuni.m  particle_fitering.m  particle_fitering_a_la_christoffersen.m  particle_fitering_a_la_christoffersen_cu_optiuni.m  solving_odes_for_qmle.m
Python/: Heston_sim.md  clean_generation.md  codex_ch3_noisy_panels_v2.md  codex_cos_calibration_jacobian_report_and_generation_freeze.md  codex_cos_calibration_jacobian_report_and_generation_freeze_21072026.md  codex_fix_persistent_factor_covariance.md  codex_heston_is_cgmm.md  codex_is_cgmm_ccf_reuse_companion.md  codex_is_cgmm_refactor_fixed_cos_architecture_and_poc.md  codex_report_noise_visualisations_eod.md  requirements.txt
Reports/: draft_proposalMar26.tex
newcode/pone/cpp/: CMakeLists.txt
newcode/pone/cpp/pricers/: pricer.h
newcode/pone/cpp/test/: CMakeLists.txt  pone.cpp  pone.h
newcode/pone/cpp/utils/: rand.cpp  rand.h
newcode/pone/cpp/wrap/: wrap.cpp
scripts/: build_lets_be_rational.sh  generation_ec2.sh  generation_local.sh  sync_run_to_s3.sh
(+294 files in other folders)
